--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,4 +1,5 @@
 ---
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
+train.jpg: train-ab59ae0ff685e875b1716c8bb69ef548.jpg
 application.js: application-363316399c9b02b9eb98cd1b13517abd.js
 application.css: application-7270767b2a9e9fff880aa5de378ca791.css
